# CoreCRM

./: .gitignore  Cargo.toml  README.md
contracts/: NewsVerification.sol
core_crm/: Cargo.toml
scripts/: compile_contract.sh
src/: config.rs  db.rs  error.rs  main.rs  models.rs
src/api/: mod.rs  news.rs
src/core/: ai_model.rs  blockchain.rs  mod.rs  news_verification.rs
