[package]
name = "core_crm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance data processing platform for marketing and sales data"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Message Queue
rdkafka = { version = "0.29", features = ["ssl", "cmake-build"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# AI and ML
tract-onnx = "0.19"
tokenizers = "0.15"
ndarray = "0.15"

# Blockchain
web3 = "0.19"
hex = "0.4"
sha3 = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
dotenv = "0.15"
config = "0.14"
async-trait = "0.1"
futures = "0.3"

# Testing
tokio-test = "0.4"
mockall = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true 